# agent-harness

./: .gitignore  README.md  config.example.json  pyproject.toml
src/agent_harness/: __init__.py  __main__.py  agent.py  cli.py  config.py
src/agent_harness/mcp/: __init__.py  manager.py
src/agent_harness/native_tools/: __init__.py  registry.py
src/agent_harness/native_tools/builtin/: __init__.py  datetime_tool.py
src/agent_harness/providers/: __init__.py  anthropic.py  base.py  openai.py
